--- a/dispatcher/pyproject.toml
+++ b/dispatcher/pyproject.toml
@@ -11,6 +11,9 @@ PyYAML = "^6.0"
 jsonschema = "^4.2.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+pytest-flake8 = "^1.0.7"
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
