--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Tests
+name: Continuous integration
 
 on:
   workflow_dispatch:
@@ -9,22 +9,14 @@ on:
     branches:
       - '**'
 
-
 jobs:
   tests:
     name: ${{ matrix.os }} / ${{ matrix.python-version }} ${{ matrix.suffix }}
     runs-on: ${{ matrix.image }}
     strategy:
       matrix:
-        os: [Ubuntu]
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        include:
-          - os: Ubuntu
-            image: ubuntu-latest
-          - os: Windows
-            image: windows-2022
-          - os: macOS
-            image: macos-11
+        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-latest]
+        python-version: ["3.9", "3.10"]
       fail-fast: false
     defaults:
       run:
@@ -44,28 +36,17 @@ jobs:
       - name: Bootstrap poetry
         run: |
           curl -sL https://install.python-poetry.org | python - -y ${{ matrix.bootstrap-args }}
-      - name: Update PATH
-        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Configure poetry
-        run: poetry config virtualenvs.in-project true
-
-      - name: Set up cache
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Ensure cache is healthy
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: timeout 10s poetry run pip --version || rm -rf .venv
-        working-directory: ./dispatcher
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          poetry config virtualenvs.in-project true
 
       - name: Install dependencies
         run: poetry install
         working-directory: ./dispatcher
 
       - name: Run pytest
-        run: poetry run python -m pytest tests --flake8
+        run: make test
+        working-directory: ./dispatcher
+
+      - name: Build wheel
+        run: make build
         working-directory: ./dispatcher
