--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,5 @@
-name: CI
+---
+name: tests
 
 on:
   workflow_dispatch:
@@ -23,28 +24,15 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Get full Python version
-        id: full-python-version
-        run: echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
-
       - name: Bootstrap poetry
-        run: |
-          curl -sL https://install.python-poetry.org | python - -y ${{ matrix.bootstrap-args }}
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-          poetry config virtualenvs.in-project true
+        run: curl -sL https://install.python-poetry.org | python - -y ${{ matrix.bootstrap-args }}
 
       - name: Install dependencies
         run: poetry install
-        working-directory: ./dispatcher
-
-      - name: Run pytest
-        run: make test
         working-directory: ./dispatcher
 
       - name: Build wheel
