--- a/dispatcher/pyproject.toml
+++ b/dispatcher/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kubot-dispatcher"
-version = "0.0.1"
+version = "0.1.1"
 description = ""
 authors = ["Maksym Lisogorskyi <m.lisogorskyi@gmail.com>"]
 license = "GPL"
@@ -9,6 +9,7 @@ license = "GPL"
 python = "^3.9"
 PyYAML = "^6.0"
 jsonschema = "^4.2.1"
+praw = "^7.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
