core-1 corrected build target description

--- a/dispatcher/Makefile
+++ b/dispatcher/Makefile
@@ -6,7 +6,7 @@ test: ## Run all tests
 	@poetry run python -m pytest tests --flake8
 
 .PHONY: build
-build: ## Run all tests
+build: ## Build a wheel
 	@poetry build
 
 .PHONY: run
