core-1 switched from praw to asyncpraw with a submission stream test

--- a/dispatcher/pyproject.toml
+++ b/dispatcher/pyproject.toml
@@ -9,7 +9,7 @@ license = "GPL"
 python = "^3.9"
 PyYAML = "^6.0"
 jsonschema = "^4.2.1"
-praw = "^7.5.0"
+asyncpraw = "^7.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
