--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -1,13 +1,15 @@
 [tool.poetry]
-name = "kubot-dispatcher"
-version = "0.1.1"
+name = "kubot"
+version = "0.1.3"
 description = ""
 authors = ["Maksym Lisogorskyi <m.lisogorskyi@gmail.com>"]
 license = "GPL"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-kubot = {path = "../package/dist/kubot-0.1.3-py3-none-any.whl"}
+PyYAML = "^6.0"
+jsonschema = "^4.2.1"
+asyncpraw = "^7.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
