--- a/.github/workflows/ci_kubot.yaml
+++ b/.github/workflows/ci_kubot.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   test:
     name: ${{ matrix.os }} / python-${{ matrix.python-version }} ${{ matrix.suffix }}
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, ubuntu-latest]
