core-4 attempt to fix python setup in actions

--- a/.github/workflows/ci_kubot.yaml
+++ b/.github/workflows/ci_kubot.yaml
@@ -12,11 +12,10 @@ on:
 
 jobs:
   test:
-    name: ${{ matrix.os }} / python-${{ matrix.python-version }} ${{ matrix.suffix }}
+    name: python-${{ matrix.python-version }} ${{ matrix.suffix }}
     runs-on: self-hosted
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-latest]
         python-version: ["3.9", "3.10"]
       fail-fast: false
     defaults:
@@ -24,12 +23,12 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
+          apt install python3
           curl -sL https://install.python-poetry.org | python - -y ${{ matrix.bootstrap-args }}
           cd package && poetry install
 
