--- a/.github/workflows/ci_kubot.yaml
+++ b/.github/workflows/ci_kubot.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install python
         run: |
+          sudo apt-get update
           sudo apt-get install python${{ matrix.python-version }}-venv
 
       - name: which python
