core-4 github actions tweak

--- a/.github/workflows/ci_kubot.yaml
+++ b/.github/workflows/ci_kubot.yaml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Install python
         run: |
-          sudo apt-get update
-          sudo apt-get install python${{ matrix.python-version }}-venv
+          sudo apt-get -qq update
+          sudo apt-get -qq --yes --force-yes install python${{ matrix.python-version }}-venv
 
       - name: which python
         run: |
