core-4 github actions tweak

--- a/.github/workflows/ci_kubot.yaml
+++ b/.github/workflows/ci_kubot.yaml
@@ -37,12 +37,15 @@ jobs:
       - name: Install poetry
         run: |
           curl -sL https://install.python-poetry.org | python${{ matrix.python-version }} - -y ${{ matrix.bootstrap-args }}
-          cd package && poetry install
 
       - name: Poetry version
         run: |
           which poetry
           poetry --version
+
+      - name: Install dependencies
+        run: |
+          cd package && poetry install
 
       - name: Run pytest
         run: make test
