maint-1 debug version bump:

--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -17,19 +17,25 @@ jobs:
       run:
         shell: bash
     steps:
+      - uses: actions/checkout@v2
 
-    - name: git version
-      run: |
-        git --version
+      - name: git version
+        run: |
+          git --version
 
-    - name: kubot version
-      id: kubot_version
-      run: echo ::set-output name=value::"$(grep version package/pyproject.toml | grep -o '[0-9.]*')"
+      - name: pwd
+        run: |
+          pwd
+          ls -lh
 
-    - name: git version
-      run: |
-        git --version
-        git config user.name "timberbot"
-        git config user.email "<>"
-        git tag v${{ steps.kubot_version.outputs.value }}
-        git show v${{ steps.kubot_version.outputs.value }}
+      - name: kubot version
+        id: kubot_version
+        run: echo ::set-output name=value::"$(grep version package/pyproject.toml | grep -o '[0-9.]*')"
+
+      - name: git version
+        run: |
+          git --version
+          git config user.name "timberbot"
+          git config user.email "<>"
+          git tag v${{ steps.kubot_version.outputs.value }}
+          git show v${{ steps.kubot_version.outputs.value }}
