maint-1 changed job name

--- a/.github/workflows/ci_kubot.yaml
+++ b/.github/workflows/ci_kubot.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   test:
-    name: CI with python-${{ matrix.python-version }} ${{ matrix.suffix }}
+    name: python-${{ matrix.python-version }} ${{ matrix.suffix }}
     runs-on: self-hosted
     strategy:
       matrix:
